[gd_scene load_steps=2 format=3 uid="uid://gtuwh7u5x2j6"]

[ext_resource type="Script" path="res://Objects/SelectableArea2D/selectable_area_2d.gd" id="1_6xdij"]

[node name="SelectableArea2D" type="Area2D"]
script = ExtResource("1_6xdij")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
